# RayTracing

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  rt.hpp
src/camera/: camera.cpp  camera.hpp
src/geometry/: vector3.hpp
src/scene/: scene.hpp
